--- a/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
+++ b/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
@@ -27,7 +27,7 @@
 				<!-- <div style="width: 100%; height: 100%; position: absolute;">
 				    <img style="opacity: .2; width: 100%; height: auto;" ng-src="{{spotlightPage.data.page.background.images.source}}">
 				</div> -->
-				<h2 style="text-shadow: 1px 1px 8px rgba(0, 0, 0, .8); color: {{base_hue_text__lightest.value}}; position: relative; margin: auto;" class="type simulated">{{spotlightPage.data.title}}</h2>
+				<!-- <h2 style="text-shadow: 1px 1px 8px rgba(0, 0, 0, .8); color: {{base_hue_text__lightest.value}}; position: relative; margin: auto;" class="type simulated">{{spotlightPage.data.title}}</h2> -->
 			</div>
 			<!-- =Page Title -->
 			
@@ -36,7 +36,7 @@
 		    	<div ng-attr-style="width: 100%; margin: 0; padding: 0; background-color: {{primary_hue_normal.value}}; height: 400px;">
 		    		<h2 style="text-shadow: 1px 1px 8px rgba(0, 0, 0, .8); color: {{base_hue_text__lightest.value}}; position: relative; margin: auto;" class="type simulated">{{spotlightPage.data.title}}</h2>
 		    	</div>
-		    	<div ng-attr-style="margin-bottom: 100px; width: 100%; margin: 0; padding: 0; background-color: {{primary_hue_normal.value}}; height: 400px;">
+		    	<div ng-attr-style="margin-bottom: 100px; width: 100%; background-color: {{base_hue_lightest.value}}; height: 400px;" layout-margin layout-padding>
 			    	<div ng-repeat="content in spotlightPage.data.page.contents">
 			    		<h1 class="type heading-2 base-hdst--text" ng-if="content.type == 'title'" ng-bind-html="content.data" style="margin-top: 8px; margin-bottom: 8px;"></h1>
 						<p class="base-hdst--text" ng-if="content.type == 'text'" ng-bind-html="content.data"></p>
