--- a/lib/client/app/application/partials/header.html
+++ b/lib/client/app/application/partials/header.html
@@ -1,5 +1,5 @@
 <!-- sticky header -->
-<div class="md-whiteframe-8dp" layout-align="center center" layout="row" layout flex>
+<div layout-align="center center" layout="row" layout flex>
 	<!-- Logo -->
 	<div flex="100" flex-gt-sm="25" layout-align="center center" layout-align-gt-sm="center center" layout="row">
 		<img src="media/logo.png" style="max-height: 64px;">
