--- a/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
+++ b/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
@@ -9,7 +9,7 @@
 	<section style="background: {{primary_hue_normal.value}}">
 
 		<!-- header -->
-		<md-subheader class="header md-whiteframe-8dp" layout-align="center center" layout="row" layout flex style="z-index: 5; box-shadow: none; border-bottom: 1px solid #e0e0e0">
+		<md-subheader class="header md-whiteframe-6dp" layout-align="center center" layout="row" layout flex style="z-index: 5; border-bottom: 1px solid #e0e0e0">
 			<div ng-include src="'application/partials/header.html'"></div>
 		</md-subheader>
 		<!-- header -->
@@ -31,7 +31,7 @@
 			</div>
 			<!-- =Page Title -->
 			
-			<div class="md-whiteframe-4dp" layout="row" layout-wrap flex="80" flex-sm="80" flex-gt-sm="60" layout-align="start start" ng-attr-style="margin-top: -400px; z-index: 1; min-height: 800px; background-color: {{base_hue_lightest.value}}; padding: 0;" layout-margin>
+			<div class="md-whiteframe-4dp" layout="row" layout-wrap flex="90" flex-sm="90" flex-gt-sm="60" layout-align="start start" ng-attr-style="margin-top: -400px; z-index: 1; min-height: 800px; background-color: {{base_hue_lightest.value}}; padding: 0;" layout-margin>
 
 		    	<div flex="100" ng-attr-style="width: 100%; margin: 0; padding: 0; background-color: {{primary_hue_normal.value}}; height: 400px;">
 		    		<h2 style="text-shadow: 1px 1px 8px rgba(0, 0, 0, .8); color: {{base_hue_text__lightest.value}}; position: relative; margin: auto;" class="type simulated">
@@ -58,7 +58,7 @@
 
 			</div>
 
-			<div class="md-whiteframe-4dp" layout="row" layout-wrap flex="80" flex-sm="80" flex-gt-sm="30" layout-align="start start" ng-attr-style="margin-top: -400px; z-index: 1; height: 800px; background-color: {{base_hue_lightest.value}}; padding: 0;" layout-margin>
+			<div class="md-whiteframe-4dp" layout="row" layout-wrap flex="90" flex-sm="90" flex-gt-sm="30" layout-align="start start" ng-attr-style="margin-top: -400px; z-index: 1; height: 600px; background-color: {{base_hue_lightest.value}}; padding: 0;" layout-margin>
 
 
 			</div>
