--- a/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
+++ b/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
@@ -99,8 +99,8 @@
 	                            </md-input-container>
 	                        </md-list-item>
 	                    </md-card-content>
-	                    <md-button class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{base_hue_lightest.value}}; position: absolute; bottom: -16px; right: 8px;">
-					        <md-icon style="color: {{primary_hue_normal.value}};">share</md-icon>
+	                    <md-button class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{base_hue_lightest.value}}; position: absolute; bottom: -42px; right: 8px;">
+					        <md-icon style="color: {{primary_hue_normal.value}};">send</md-icon>
 					    </md-button>
 	                </form>
 	            </md-card>
