--- a/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
+++ b/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
@@ -5,44 +5,44 @@
     right: 0; top: 200px; padding:0; margin: 0!important;
 }
 </style>
-<md-content class="page" ng-attr-style="height: {{window_height}}px">
-	<section ng-attr-style="background: {{primary_hue_normal.value}}">
+<md-content class="page" style="height: {{window_height}}px">
+	<section style="background: {{primary_hue_normal.value}}">
 
 		<!-- header -->
-		<md-subheader class="header md-whiteframe-6dp" layout-align="center center" layout="row" layout flex ng-attr-style="z-index: 5; border-bottom: 1px solid #e0e0e0">
+		<md-subheader class="header md-whiteframe-6dp" layout-align="center center" layout="row" layout flex style="z-index: 5; border-bottom: 1px solid #e0e0e0">
 			<div ng-include src="'application/partials/header.html'"></div>
 		</md-subheader>
 		<!-- header -->
 
 		<div ng-include src="'application/partials/navigation-menu.html'"></div>
 
-		<md-button ng-if="me.security.roles == 'management'" ng-click="edit(spotlightPage.settings.configs, spotlightPage)" class="md-fab custom-deep-button" aria-label="Edit Info Page" ng-attr-style="background-color: {{primary_hue_normal.value}}; position: fixed; bottom: 128px; right: 24px;">
-	        <md-icon ng-attr-style="color: {{base_hue_lighter.value}};">build</md-icon>
+		<md-button ng-if="me.security.roles == 'management'" ng-click="edit(spotlightPage.settings.configs, spotlightPage)" class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: fixed; bottom: 128px; right: 24px;">
+	        <md-icon style="color: {{base_hue_lighter.value}};">build</md-icon>
 	    </md-button>
 
-	    <div class="interior-page" flex="100" layout="row" layout-align="center start" layout-wrap ng-attr-style="width: 100%;">
+	    <div class="interior-page" flex="100" layout="row" layout-align="center start" layout-wrap style="width: 100%;">
 
 			<!-- Page Title -->
-			<div class="spotlight hero" layout="row" flex="100" ng-attr-style="position: relative; top: 0; overflow: hidden; text-align: center; background-color: {{base_hue_darkest.value}};">
-				<div ng-attr-style="width: 100%; height: 100%; position: absolute;">
-				    <img ng-attr-style="opacity: .1; min-width: 100%; min-height: 100%; width: auto; height: auto;" ng-src="{{spotlightPage.data.page.background.images.source}}">
+			<div class="spotlight hero" layout="row" flex="100" style="position: relative; top: 0; overflow: hidden; text-align: center; background-color: {{base_hue_darkest.value}};">
+				<div style="width: 100%; height: 100%; position: absolute;">
+				    <img style="opacity: .1; min-width: 100%; min-height: 100%; width: auto; height: auto;" ng-src="{{spotlightPage.data.page.background.images.source}}">
 				</div>
-				<!-- <h2 ng-attr-style="text-shadow: 1px 1px 8px rgba(0, 0, 0, .8); color: {{base_hue_text__lightest.value}}; position: relative; margin: auto;" class="type simulated">{{spotlightPage.data.title}}</h2> -->
+				<!-- <h2 style="text-shadow: 1px 1px 8px rgba(0, 0, 0, .8); color: {{base_hue_text__lightest.value}}; position: relative; margin: auto;" class="type simulated">{{spotlightPage.data.title}}</h2> -->
 			</div>
 			<!-- =Page Title -->
 			
 			<md-card class="md-whiteframe-8dp" layout="row" layout-wrap flex="90" flex-sm="90" flex-gt-sm="50" layout-align="start start" ng-attr-style="margin-top: -400px; z-index: 1; min-height: 800px; background-color: {{base_hue_lightest.value}}; padding: 0; position: relative;" layout-margin>
-				<img ng-attr-style="height: 400px; margin: 0;" class="md-card-image" ng-src="{{spotlightPage.data.page.background.images.source}}">
-				<md-button class="md-fab custom-deep-button" aria-label="Edit Info Page" ng-attr-style="background-color: {{primary_hue_normal.value}}; position: absolute; top: 364px; right: 8px;">
-			        <md-icon ng-attr-style="color: {{base_hue_lighter.value}};">share</md-icon>
+				<img style="height: 400px; margin: 0;" class="md-card-image" ng-src="{{spotlightPage.data.page.background.images.source}}">
+				<md-button class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; top: 364px; right: 8px;">
+			        <md-icon style="color: {{base_hue_lighter.value}};">share</md-icon>
 			    </md-button>
 		    	<div flex="100" ng-attr-style="margin-bottom: 100px; width: 100%; background-color: {{base_hue_lightest.value}}; min-height: 400px;" layout-margin layout-padding>
 		    		<h1 class="type simulated">{{spotlightPage.data.title}}</h1>
 			    	<div ng-repeat="content in spotlightPage.data.page.contents">
-			    		<h1 class="type heading-2 base-hdst--text" ng-if="content.type == 'title'" ng-bind-html="content.data" ng-attr-style="margin-top: 8px; margin-bottom: 8px;"></h1>
+			    		<h1 class="type heading-2 base-hdst--text" ng-if="content.type == 'title'" ng-bind-html="content.data" style="margin-top: 8px; margin-bottom: 8px;"></h1>
 						<p class="base-hdst--text" ng-if="content.type == 'text'" ng-bind-html="content.data"></p>
 						<p class="base-hdst--text" ng-repeat="listItem in content.data track by $index" ng-if="content.type == 'list'">&bull;&nbsp;&nbsp;{{listItem.item}}</p>
-						<div ng-attr-style="width: 100%; padding: 0">
+						<div style="width: 100%; padding: 0">
 							<!-- panel images -->
 								<md-card ng-cloak class="lightweight-card-image md-whiteframe-2dp" ng-if="content.type == 'image'" ng-attr-style="position: relative;">
 									<img ng-src="{{content.source ? content.source : 'https://storage.googleapis.com/spsd-189118.appspot.com/missing-image.png'}}" class="md-card-image">
@@ -50,7 +50,7 @@
 							<!-- panel images -->
 						</div>
 						<a ng-if="content.type == 'button'" href="{{content.data.url}}">
-	                        <md-button class="md-raised" ng-attr-style="margin-top: 8px; margin-bottom: 16px; background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">{{content.data.button}}</md-button>
+	                        <md-button class="md-raised" style="margin-top: 8px; margin-bottom: 16px; background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">{{content.data.button}}</md-button>
 	                    </a>
 			        </div>
 		    	</div>
@@ -60,7 +60,7 @@
 			<div class="md-whiteframe-8dp" layout="row" layout-wrap flex="90" flex-sm="90" flex-gt-sm="25" layout-align="start start" ng-attr-style="margin-top: -400px; z-index: 1; min-height: 200px; background-color: {{base_hue_lightest.value}}; padding: 0;" layout-margin>
 				<md-card ng-attr-style="background: {{base_hue_lightest.value}}; width: 100%; position: relative;">
 	                <form name="spotlight">
-	                	<div ng-attr-style="text-align: center">
+	                	<div style="text-align: center">
 	                		<h1>Contact mma Today!</h1>
 	                	</div>
 	                    <md-card-content>
@@ -68,7 +68,7 @@
 	                            <md-input-container class="md-block lightweight-md-input">
 	                                <label>Full Name</label>
 	                                <input name="name" ng-model="spotlight_page_contact_form.name" minlength="4" required>
-	                                <div ng-messages="spotlight.name.$dirty" ng-show="spotlight.name.$dirty">
+	                                <div ng-messages="spotlight.name.$error" ng-show="spotlight.name.$dirty">
 	                                    <div ng-message="required">Name required!</div>
 	                                    <div ng-message="minlength">Name too short!</div>
 	                                </div>
@@ -78,7 +78,7 @@
 	                            <md-input-container class="md-block lightweight-md-input">
 	                                <label>Email</label>
 	                                <input type="email" name="email" ng-model="spotlight_page_contact_form.email" required>
-	                                <div ng-messages="spotlight.email.$dirty" ng-show="spotlight.email.$dirty">
+	                                <div ng-messages="spotlight.email.$error" ng-show="spotlight.email.$dirty">
 	                                    <div ng-message="required">Email required!</div>
 	                                    <div ng-message="email">Enter a valid email!</div>
 	                                </div>
@@ -88,7 +88,7 @@
 	                        	<md-input-container class="md-block lightweight-md-input" flex>
 	                                <label>Message</label>
 	                                <textarea name="message" md-detect-hidden="true" ng-model="spotlight_page_contact_form.message" rows="3" minlength="10" md-maxlength="250" required></textarea>
-	                                <div ng-messages="spotlight.message.$dirty" ng-show="spotlight.message.$dirty">
+	                                <div ng-messages="spotlight.message.$error" ng-show="spotlight.message.$dirty">
 	                                    <div ng-message="required">Message required!</div>
 	                                    <div ng-message="minlength">Message too short!</div>
 	                                    <div ng-message="md-maxlength">Message too long!</div>
@@ -96,8 +96,8 @@
 	                            </md-input-container>
 	                        </md-list-item>
 	                    </md-card-content>
-	                    <md-button class="md-fab custom-deep-button" aria-label="Edit Info Page" ng-attr-style="background-color: {{primary_hue_normal.value}}; position: absolute; bottom: -42px; right: 8px;">
-					        <md-icon ng-attr-style="color: {{base_hue_lighter.value}};">send</md-icon>
+	                    <md-button class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; bottom: -42px; right: 8px;">
+					        <md-icon style="color: {{base_hue_lighter.value}};">send</md-icon>
 					    </md-button>
 	                </form>
 	            </md-card>
