--- a/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
+++ b/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
@@ -6,7 +6,7 @@
 }
 </style>
 <md-content class="page" style="height: {{window_height}}px">
-	<section style="background: {{primary_hue_normal.value}}">
+	<section style="background: {{base_hue_lighter.value}}">
 
 		<!-- header -->
 		<md-subheader class="header md-whiteframe-6dp" layout-align="center center" layout="row" layout flex style="z-index: 5; border-bottom: 1px solid #e0e0e0">
@@ -23,7 +23,7 @@
 	    <div class="interior-page" flex="100" layout="row" layout-align="center start" layout-wrap style="width: 100%;">
 
 			<!-- Page Title -->
-			<div class="spotlight hero" layout="row" flex="100" style="position: relative; top: 0; overflow: hidden; text-align: center; background-color: {{base_hue_darkest.value}};">
+			<div class="spotlight hero" layout="row" flex="100" style="position: relative; top: 0; overflow: hidden; text-align: center; background-color: {{primary_hue_normal.value}};">
 				<div style="width: 100%; height: 100%; position: absolute;">
 				    <img style="opacity: .1; min-width: 100%; min-height: 100%; width: auto; height: auto;" ng-src="{{spotlightPage.data.page.background.images.source}}">
 				</div>
