--- a/lib/client/app/application/partials/header.html
+++ b/lib/client/app/application/partials/header.html
@@ -7,7 +7,7 @@
 	<!-- Logo -->
 	<!-- Navigation Items -->
 	<div flex="25" flex-gt-sm="75" layout-align="end center" layout="row" ng-init="navigation_panel = false">
-		<md-button class="md-icon-button navigation menu" style="color: {{base_hue_darkest.value}};" ng-click="navigation_panel = true">
+		<md-button class="md-icon-button navigation menu" style="color: {{base_hue_darkest.value}};" ng-click="open_parent_menu()">
 			<md-icon style="color: {{base_hue_darkest.value}}">menu</md-icon>
 		</md-button>
 		<md-button ng-repeat="item in settings.navigation.data track by $index" class="navigation link" ng-click="sub_navigation_panel = true; open_menu(item)" style="color: {{base_hue_darkest.value}};">
