--- a/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
+++ b/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
@@ -32,12 +32,19 @@
 			<!-- =Page Title -->
 			
 			<md-card class="md-whiteframe-8dp" layout="row" layout-wrap flex="90" flex-sm="90" flex-gt-sm="50" layout-align="start start" ng-attr-style="margin-top: -400px; z-index: 1; min-height: 800px; background-color: {{base_hue_lightest.value}}; padding: 0; position: relative;" layout-margin>
-				<img style="height: 400px; width: auto; margin: 0;" class="md-card-image" ng-src="{{spotlightPage.data.page.background.images.source}}">
+				<div flex="100" style="height: 400px; width: 100%; margin: 0; overflow: hidden">
+					<img style="max-height: 100%; max-width: 100%; height: auto; width: auto;" ng-src="{{spotlightPage.data.page.background.images.source}}">
+				</div>
 				<md-button class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; top: 364px; right: 8px;">
 			        <md-icon style="color: {{base_hue_lighter.value}};">share</md-icon>
 			    </md-button>
 		    	<div flex="100" ng-attr-style="margin-bottom: 100px; width: 100%; background-color: {{base_hue_lightest.value}}; min-height: 400px;" layout-margin layout-padding>
-		    		<h1 class="type simulated">{{spotlightPage.data.title}}</h1>
+		    		<md-card-title>
+						<md-card-title-text>
+							<span class="md-headline">{{spotlightPage.data.title}}</span>
+						</md-card-title-text>
+					</md-card-title>
+		    		<!-- <h1 class="type simulated">{{spotlightPage.data.title}}</h1> -->
 			    	<div ng-repeat="content in spotlightPage.data.page.contents">
 			    		<h1 class="type heading-2 base-hdst--text" ng-if="content.type == 'title'" ng-bind-html="content.data" style="margin-top: 8px; margin-bottom: 8px;"></h1>
 						<p class="base-hdst--text" ng-if="content.type == 'text'" ng-bind-html="content.data"></p>
