--- a/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
+++ b/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
@@ -32,8 +32,8 @@
 			<!-- =Page Title -->
 			
 			<md-card class="md-whiteframe-8dp" layout="row" layout-wrap flex="90" flex-sm="90" flex-gt-sm="50" layout-align="start start" ng-attr-style="margin-top: -400px; z-index: 1; min-height: 800px; background-color: {{base_hue_lightest.value}}; padding: 0; position: relative;" layout-margin>
-				<div flex="100" style="height: 400px; width: 100%; margin: 0; overflow: hidden">
-					<img style="min-height: 100%; min-width: 100%; height: auto; width: auto;" ng-src="{{spotlightPage.data.page.background.images.source}}">
+				<div flex="100" style="height: 400px; width: 100%; margin: 0; overflow: hidden; position: relative;">
+					<img style="min-height: 100%; min-width: 100%; height: auto; width: auto; position: absolute; top: -50%; left: -50%;" ng-src="{{spotlightPage.data.page.background.images.source}}">
 				</div>
 				<md-button class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; top: 364px; right: 8px;">
 			        <md-icon style="color: {{base_hue_lighter.value}};">share</md-icon>
