--- a/lib/client/app/application/pages/posts/partials/blog-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-template.html
@@ -16,7 +16,7 @@
 		<div class="interior-page" flex="100" layout="row" layout-align="center start" layout-wrap style="width: 100%;">
 
 			<!-- Page Title -->
-			<div layout="row" flex="75" style="height: 600px; position: relative; top: 0; overflow: hidden; text-align: center; background-color: {{base_hue_darker_darkest_opacity.value}}">
+			<div layout-margin layout-padding layout="row" flex="75" style="height: 600px; position: relative; top: 0; overflow: hidden; text-align: center; background-color: {{base_hue_darker_darkest_opacity.value}}">
 				<div style="width: 100%; height: 100%; position: absolute;">
 				    <img style="opacity: .3; min-width: 100%; min-height: 100%; width: auto; height: auto;" ng-src="{{blogPage.data.page.background.images.source}}">
 				</div>
@@ -25,7 +25,7 @@
 			<!-- =Page Title -->
 
 			<!-- tab Panel Component -->
-		    <div layout="row" layout-wrap flex="90" flex-sm="90" flex-gt-sm="75" layout-align="start start" style="z-index: 3; min-height: 500px;" layout-padding layout-margin>
+		    <div layout="row" layout-wrap flex="90" flex-sm="90" flex-gt-sm="75" layout-align="start start" ng-attr-style="z-index: 3; min-height: 500px; background-color: {{base_hue_lightest.value}};" layout-padding layout-margin>
 
 				<md-list class="md-dense" flex="100" flex-gt-sm="100">
                     <md-list-item class="md-3-line" flex style="padding: 0;">
