--- a/lib/client/app/application/pages/posts/partials/blog-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-template.html
@@ -16,9 +16,9 @@
 		<div class="interior-page" flex="100" layout="row" layout-align="center start" layout-wrap style="width: 100%;">
 
 			<!-- Page Title -->
-			<div class="md-whiteframe-8dp" layout-margin layout-padding layout="row" flex="75" style="height: 600px; position: relative; top: 0; overflow: hidden; text-align: center; background-color: {{base_hue_darker_darkest_opacity.value}}">
-				<div style="width: 100%; height: 100%; position: relative;">
-				    <img style="opacity: .3; min-height: 100%; min-width: 100%; height: auto; width: auto; position: absolute; top: -75%; left: -16.5%;" ng-src="{{blogPage.data.page.background.images.source}}">
+			<div class="md-whiteframe-8dp" layout="row" flex="75" style="height: 600px; position: relative; overflow: hidden; text-align: center; background-color: {{base_hue_darker_darkest_opacity.value}}; margin-top: 16px;">
+				<div style="width: 100%; height: 100%; position: relative; margin: 0;">
+				    <img style="opacity: .3; min-height: 100%; min-width: 100%; height: auto; width: auto; position: absolute; top: 0; left: 0;" ng-src="{{blogPage.data.page.background.images.source}}">
 				</div>
 				<h2 style="color: {{base_hue_text__lightest.value}}; position: relative; margin: auto; text-shadow: 1px 1px 8px rgba(0, 0, 0, .8);" class="type simulated">{{blogPage.data.title}}</h2>
 			</div>
