--- a/lib/client/app/application/pages/info/partials/info-template.html
+++ b/lib/client/app/application/pages/info/partials/info-template.html
@@ -1,5 +1,5 @@
 <md-content class="page" style="height: {{window_height}}px">
-	<section style="background: {{base_hue_lightest.value}}">
+	<section style="background: {{base_hue_lighter.value}}">
 		
 		<!-- header -->
 		<md-subheader class="header md-whiteframe-6dp" layout-align="center center" layout="row" layout flex style="z-index: 5; border-bottom: 1px solid #e0e0e0">
@@ -50,7 +50,7 @@
 		    <!-- tab Panel Component -->
 
             <!-- Map Widget -->
-            <div class="md-whiteframe-8dp" flex="90" flex-sm="90" flex-gt-sm="25" layout="row" layout-align="center start" style="z-index: 2; position: relative;">
+            <div class="md-whiteframe-8dp" flex="90" flex-sm="90" flex-gt-sm="25" layout="row" layout-align="center start" style="z-index: 2; position: relative;" layout-margin>
 				<div layout-wrap layout="row" layout-align="start center" flex>
 					<div flex style="margin-bottom: -5px; position: relative;" layout-align="end center">
 						<iframe ng-src="{{trusted_google_address_widget_map}}" width="auto" height="600" frameborder="0" style="border:0; width: 100%;" allowfullscreen></iframe>
